[tool.poetry]
name = "test-curso-cac"
version = "0.1.0"
description = "bla bla bla"
authors = ["HeberTU <heber.trujillo@glovoapp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
